# cmake-skeleton-project

./: CMakeLists.txt  README.md  clone-project.sh
myapp/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  prime.cpp  prime.h
mytest/: CMakeLists.txt  primeTest.cpp
